feat (distribution) Добавить класс поиска дат в отдельный класс